--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	
 	<div class="container">
 		<div class="header">
-			<h1 class="header__greeting">Howdy, <span class="header__greeting__name">Anon</span>.</h1>
+			<h1 class="header__greeting">Howdy, <span class="header__greeting__name">Jack</span>.</h1>
 			<div class="header__weather">
 				<f id="header__weather__alert"></f>
 				<f id="header__weather__info"></f>
