--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
 			<a id="spotify" href="https://open.spotify.com/browse/featured">
 				<i class="fab fa-spotify"></i>
 			</a>
+			<a id="canvas" href="https://hse.instructure.com/">
+				<i class="fab fa-canvas"></i>
+			</a>
 		</div>
 	</div>
 
