--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<a id="twitter" href="https://twitter.com/">
 				<i class="fab fa-twitter"></i>
 			</a>
-			<a id="youtube" href="https://www.youtube.com/feed/subscriptions">
+			<a id="youtube" href="https://www.youtube.com">
 				<i class="fab fa-youtube"></i>
 			</a>
 			<a id="inbox" href="https://mail.google.com/mail/ca/u/1/#inbox">
