--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<hr class="header__line">
 		</div>
 		<div class="main">
-			<a id="twitter" href="https://twitter.com/">
+			<a id="twitter" href="https://bsky.app/">
 				<i class="fab fa-twitter"></i>
 			</a>
 			<a id="youtube" href="https://www.youtube.com">
