--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
 			<hr class="header__line">
 		</div>
 		<div class="main">
-			<a id="twitter" href="https://bsky.app/">
+			<a target="_self" id="twitter" href="https://x.com/home">
 				<i class="fab fa-twitter"></i>
 			</a>
-			<a id="youtube" href="https://www.youtube.com">
+			<a target="_self" id="youtube" href="https://www.youtube.com">
 				<i class="fab fa-youtube"></i>
 			</a>
-			<a id="inbox" href="https://mail.google.com/mail/ca/u/1/#inbox">
+			<a target="_self" id="inbox" href="https://mail.google.com/mail/ca/u/1/#inbox">
 				<i class="fas fa-inbox"></i>
 			</a>
-			<a id="twitch" href="https://www.twitch.tv/">
+			<a target="_self" id="twitch" href="https://www.twitch.tv/">
 				<i class="fab fa-twitch"></i>
 			</a>
-			<a id="spotify" href="https://open.spotify.com/browse/featured">
+			<a target="_self" id="spotify" href="https://open.spotify.com/browse/featured">
 				<i class="fab fa-spotify"></i>
 			</a>
 		</div>
